// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolAlert slot should render content passed into the slot 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          alert with slot
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
  <div>
    content of slot
  </div>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=0 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=false _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=0 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <strong class="kol-alert__heading kol-alert__heading--h0 kol-headline kol-headline--single kol-headline--strong" id="heading">
          Überschrift
        </strong>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=1 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h1 class="kol-alert__heading kol-alert__heading--h1 kol-headline kol-headline--h1 kol-headline--single" id="heading">
          Überschrift
        </h1>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=2 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h2 class="kol-alert__heading kol-alert__heading--h2 kol-headline kol-headline--h2 kol-headline--single" id="heading">
          Überschrift
        </h2>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=3 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h3 class="kol-alert__heading kol-alert__heading--h3 kol-headline kol-headline--h3 kol-headline--single" id="heading">
          Überschrift
        </h3>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=4 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h4 class="kol-alert__heading kol-alert__heading--h4 kol-headline kol-headline--h4 kol-headline--single" id="heading">
          Überschrift
        </h4>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=5 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h5 class="kol-alert__heading kol-alert__heading--h5 kol-headline kol-headline--h5 kol-headline--single" id="heading">
          Überschrift
        </h5>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="default" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-default kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-message
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="error" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="info" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-info kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-info
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-info" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="success" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-success kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-success
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-success" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;

exports[`kol-alert should render with _label="Überschrift" _alert=true _level=6 _type="warning" 1`] = `
<kol-alert>
  <template shadowrootmode="open">
    <kol-alert-wc>
      <!---->
      <div class="kol-alert kol-alert--type-warning kol-alert--variant-msg" data-testid="alert" role="alert">
        <span class="visually-hidden">
          kol-warning
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-warning" role="presentation"></i>
        <h6 class="kol-alert__heading kol-alert__heading--h6 kol-headline kol-headline--h6 kol-headline--single" id="heading">
          Überschrift
        </h6>
        <div aria-describedby="heading" class="kol-alert__content">
          <slot></slot>
        </div>
      </div>
    </kol-alert-wc>
  </template>
</kol-alert>
`;
